[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/InstrumentConfig/InstrumentConfigRow_Key.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.415686, 0.415686, 0.415686, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Row_Key" type="HBoxContainer"]
margin_top = 46.0
margin_right = 476.0
margin_bottom = 66.0
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="h_spacer" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.321569, 0.301961, 0.301961, 1 )

[node name="Minus" type="Button" parent="."]
margin_left = 45.0
margin_right = 62.0
margin_bottom = 29.0
text = "-"

[node name="Key" type="LineEdit" parent="."]
margin_left = 67.0
margin_right = 125.0
margin_bottom = 29.0
placeholder_text = "Key"

[node name="sep_1" type="VSeparator" parent="."]
margin_left = 130.0
margin_right = 134.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="."]
margin_left = 139.0
margin_right = 176.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "MIDI
octave"

[node name="midi_octave" type="SpinBox" parent="."]
margin_left = 181.0
margin_right = 255.0
margin_bottom = 29.0

[node name="sep_2" type="VSeparator" parent="."]
margin_left = 260.0
margin_right = 264.0
margin_bottom = 29.0

[node name="letters" type="Label" parent="."]
margin_left = 269.0
margin_top = 7.0
margin_right = 314.0
margin_bottom = 21.0
text = "Letters"

[node name="letters_panel" type="PanelContainer" parent="."]
margin_left = 319.0
margin_right = 476.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="letters_list" type="HBoxContainer" parent="letters_panel"]
margin_right = 157.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_constants/separation = 5

[connection signal="gui_input" from="letters_panel" to="." method="_on_letters_panel_gui_input"]
[connection signal="mouse_exited" from="letters_panel" to="." method="_on_letters_panel_mouse_exited"]
[connection signal="mouse_entered" from="letters_panel/letters_list" to="." method="_on_letters_list_mouse_entered"]
